# email-sync

./: .env.example  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml
src/: config.py  main.py
src/rabbitmq/: include_consumers.py
src/rabbitmq/consumers/: __init__.py  calendar.py  event.py  verification.py
